#35 WIP: Added project card images, some content and code updates

--- a/src/styles/_projectCard.scss
+++ b/src/styles/_projectCard.scss
@@ -164,6 +164,17 @@
       }
     }
   }
+
+  &__image {
+    margin: 10px;
+    max-width: 180px;
+    overflow: hidden;
+
+    @include screen(medium) {
+      max-width: 210px;
+    }
+
+  }
 }
 
 .horizontal-list {
