--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1280,6 +1280,18 @@ p {
   }
 }
 
+.project__image {
+  margin: 10px;
+  max-width: 180px;
+  overflow: hidden;
+}
+
+@media only screen and (min-width: 768px) {
+  .project__image {
+    max-width: 210px;
+  }
+}
+
 .horizontal-list {
   display: -webkit-box;
   display: -ms-flexbox;
