--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
 /*------------------ Variables ------------------*/
+// Colour ideas/options
+// #88292F; #2E1E0F; #603140; #20063B; #4A2040; #2B2D42; #012A36; #02394a; #FFEFD3
+
 $colour-base-dark: #2e3c41;
-$colour-base-light: #ffffff;
+$colour-base-light: #FCFFFD;
 
 $colour-grey-dark: #202a2e;
 $colour-grey-dark-medium: #3d5057;
@@ -15,8 +18,9 @@ $colour-highlight-1: #f3766f;
 $colour-highlight-1-dark: #ee5951;
 $colour-highlight-1-light: #ffb5b1;
 $colour-highlight-2: #ffe657;
-$colour-highlight-2-light: #fff5bc;
+$colour-highlight-2-light: #fff7ca;
 $colour-blue: #32809e;
+$colour-purple: #4A2040;
 
 // Side padding
 $padding-sides: 26px; // xsmall padding for screen-frame
