--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -60,15 +60,28 @@
 
   &__container {
     text-align: left;
-    width: fit-content;
+    // width: fit-content;
     margin: 0 auto;
+    max-width: 240px;
+
+    @include screen(small) {
+      max-width: 290px;
+    }
+
+    @include screen(medium) {
+      max-width: 340px;
+    }
+
+    @include screen(large) {
+      max-width: 360px;
+    }
   }
 
   &__headline {
     @extend h3;
     margin-bottom: .4em;
     color: $colour-base-light;
-    font-weight: 400;
+    font-weight: 700;
 
     @include screen(small) {
       margin-bottom: .5em;
@@ -77,6 +90,12 @@
     @include screen(large) {
       margin-bottom: .3em;
     }
+  }
+
+  &__text {
+    color: $colour-base-light;
+    font-size: text-sm;
+    margin-bottom: .6em;
   }
 
   &__link {
